Bug 449245 - Keyboard layout labels are no longer shown on X11, instead the short name is used
Summary: Keyboard layout labels are no longer shown on X11, instead the short name is ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Keyboard Layout widget (show other bugs)
Version: 5.23.90
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-27 12:33 UTC by Bharadwaj Raju
Modified: 2022-01-28 18:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bharadwaj Raju 2022-01-27 12:33:03 UTC
SUMMARY
Since some time, the keyboard layout label (displayName) is not being used in the applet. Only the short name.


STEPS TO REPRODUCE
1. Set a label for a layout
2. Check applet

SOFTWARE/OS VERSIONS
Everything KDE is git master.

ADDITIONAL INFORMATION
I tried debugging this but got stuck. The labels are being remembered in the KCM, so they must be getting saved. However I can't figure out how the label is supposed to get to kded. I don't think the information is saved in XKB.
Comment 1 Bharadwaj Raju 2022-01-27 12:36:10 UTC
> Since some time, the keyboard layout label (displayName) is not being used in the applet.

To clarify, the applet *is* using the displayName property, but it is set to the same thing as shortName by kded(?).
Comment 2 Bug Janitor Service 2022-01-27 13:03:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/825
Comment 3 Fabian Vogt 2022-01-28 11:38:53 UTC
Git commit 9ce7cbf74549f49de447c6ce54babda1c2b67954 by Fabian Vogt, on behalf of Bharadwaj Raju.
Committed on 28/01/2022 at 11:34.
Pushed by fvogt into branch 'master'.

kcms/keyboard: daemon: Match layouts against config to get a proper display name (label)

M  +13   -1    kcms/keyboard/keyboard_daemon.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/9ce7cbf74549f49de447c6ce54babda1c2b67954
Comment 4 Fabian Vogt 2022-01-28 12:12:15 UTC
Git commit bb187b348964ec4334b8197379ba41a71598472f by Fabian Vogt, on behalf of Bharadwaj Raju.
Committed on 28/01/2022 at 12:12.
Pushed by fvogt into branch 'Plasma/5.24'.

kcms/keyboard: daemon: Match layouts against config to get a proper display name (label)


(cherry picked from commit 9ce7cbf74549f49de447c6ce54babda1c2b67954)

M  +13   -1    kcms/keyboard/keyboard_daemon.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/bb187b348964ec4334b8197379ba41a71598472f