kcms/keyboard: daemon: Match layouts against config to get a proper display name (label)

BUG: 449245